--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,39 +6,388 @@
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Write your sass code here or import partials
-
-
-// ABOUT
-#about {
-    border: 1px solid red;
-    @include flex;
-    gap: 1rem;
-    padding: 2rem;
-    .sujin-pic {
-        width: 200px;
-        height: 200px;
-        background-image: url(../img/sujin-pic.jpg);
-        background-size: cover;
-        background-position: bottom;
-        background-repeat: no-repeat;
-        border-radius: 50%;
-        box-shadow:  20px 20px 49px #d3d3d3,
-                    -20px -20px 49px #ededed;
-        filter: grayscale(0.8);
-        &:hover {
-            filter: grayscale(0);
-        }
-    }
-    h1 {
-        font-size: 5rem;
-    }
-    h2 {
-        font-size: 3rem;
-    }
-    p {
-        font-size: 1rem;
-    }
+body {
+  background-color: $tertiary-color;
+  color: $main-font-color;
+  min-height: 100vh;
 }
 
+// Navbar
+nav {
+  height: 80px;
+  background-color: $primary-color;
+  width: 100%;
+  line-height: 5rem;
 
+  position: fixed;
+  z-index: 99;
+  //   z-index works only with positioned elements.
+  #check {
+    display: none;
+    &:checked {
+      ~ {
+        ul {
+          display: block;
+        }
+      }
+    }
+  }
+  .checkbtn {
+    position: fixed;
+    right: 1rem;
+    top: 0.5rem;
+    font-size: 3rem;
+    cursor: pointer;
+  }
+  ul {
+    padding-left: 0;
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    top: 5rem;
+    display: none;
+    animation: smooth-menu 1s;
+    li {
+      list-style: none;
+      background-color: $primary-color;
+      color: $main-font-color;
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        background-color: $secondary-color;
+      }
+      a {
+        text-decoration: none;
+        font-size: 2rem;
+        padding: 0 1rem;
+        color: $main-font-color;
+        display: block;
+        // without this, i need to click the word exactly instead of clicking menu
+        &:hover {
+          color: $main-font-color;
+        }
+      }
+    }
+  }
+}
+@keyframes smooth-menu {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+// Main
+main {
+  padding: 1rem;
+}
 
+// ABOUT
+.about {
+  margin-top: 10rem;
+  @include flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+  .sujin-pic {
+    width: 20rem;
+    height: 20rem;
+    background-image: url(../img/sujin-pic.jpg);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    box-shadow: 5px 5px 20px #d3d3d3, -5px -5px 20px #ededed;
+    filter: grayscale(0.8);
+    transition: 1s;
+    &:hover {
+      filter: grayscale(0);
+    }
+  }
+  h1 {
+    font-size: 4rem;
+    margin-top: 10rem;
+    text-align: center;
+  }
+  .job-title {
+    font-size: 1.8rem;
+  }
+  p {
+    font-size: 1.2rem;
+  }
+}
+
+// Social Media BTN
+.social-media-container {
+  @include flex;
+  flex-direction: column;
+  .icons {
+    @include flex;
+    gap: 2rem;
+    padding: 2rem;
+    font-size: 3rem;
+    .fa-github,
+    .fa-linkedin,
+    .fa-file-invoice {
+      transition: 0.3s ease-out;
+      &:hover {
+        transform: scale(1.1);
+        border-bottom: 3px solid $secondary-color;
+        padding-bottom: 10px;
+      }
+    }
+  }
+  .scroll-btn {
+    border: 2px solid $tertiary-color;
+    border-radius: 5px;
+    color: $tertiary-color;
+    font-size: 1.5rem;
+    background: none;
+    padding: 0.1rem 1rem;
+  }
+}
+
+// projects
+
+.projects {
+  @include flex;
+  flex-direction: column;
+  h2 {
+    font-size: 3rem;
+    margin-top: 25rem;
+  }
+
+  .first {
+    background-image: url(../img/project1.png);
+  }
+
+  .second {
+    background-image: url(../img/project2.png);
+    background-position: center;
+  }
+
+  .third {
+    background-image: url(../img/project3.png);
+  }
+
+  .fourth {
+    background-image: url(../img/project4.png);
+  }
+
+  .fifth {
+    background-image: url(../img/project5.png);
+    background-position: center;
+  }
+}
+.project {
+  margin: 5rem 0;
+  width: 80%;
+  min-height: 35vh;
+  @include flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  // when the text outside of container, should be hidden.
+  &:hover {
+    h3,
+    p,
+    .fa-github {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  h3,
+  p,
+  .fa-github {
+    opacity: 0;
+  }
+  h3 {
+    font-size: 2rem;
+    transform: translateX(calc(-100% - 5rem));
+    transition: 0.5s;
+  }
+  p {
+    transform: translateX(calc(-100% - 8rem));
+    transition: 0.5s;
+  }
+  .fa-github {
+    transform: translateX(calc(100% + 11rem));
+    transition: 0.5s;
+  }
+
+  a {
+    font-size: 2rem;
+    margin: 0 5px;
+  }
+  &:hover {
+    background: #000;
+    // img {
+    //   opacity: 0;
+    // }
+    h3,
+    p,
+    a {
+      opacity: 1;
+    }
+  }
+}
+
+// FOOTER EXCEPT BACK TO TOP
+footer {
+  padding: 2rem;
+  position: relative;
+  // this is for back to top icon
+  h2 {
+    margin: 25rem 0 3rem;
+    text-align: center;
+    font-size: 3rem;
+  }
+  // CONTACT
+  input:not(form > input) {
+    width: 100%;
+    height: 30px;
+    margin: 10px auto;
+  }
+  textarea {
+    width: 100%;
+    height: 10rem;
+    margin: 10px auto;
+  }
+  button[type="submit"] {
+    font-size: 1.5rem;
+    border: none;
+    border-radius: 5px;
+    background-color: $primary-color;
+    color: $main-font-color;
+    display: block;
+    margin: 5rem auto;
+    // added display:block to make margin:block work.
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: 0.5s;
+    &:hover {
+      background-color: $secondary-color;
+      transform: scale(1.1);
+      box-shadow: 0px 15px 20px rgba(238, 238, 238, 0.4);
+      transform: translateY(-7px);
+    }
+  }
+  // FOOTER SOCIAL MEDIA
+  .footer-socialMedia {
+    text-align: center;
+    font-size: 3rem;
+    margin: 7rem 0;
+  }
+  // COPYRIGHT
+  p {
+    text-align: center;
+    margin: 5rem 0 1rem;
+  }
+  // BACK TO TOP BUTTON
+  button[type="button"] {
+    position: absolute;
+    left: 50%;
+    bottom: 7rem;
+    transform: translate(-50%);
+    border: none;
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+    // size of button
+    font-size: 2.5rem;
+    background-color: $primary-color;
+    color: $main-font-color;
+  }
+}
+
+@media (min-width: 768px) {
+  nav {
+    ul {
+      @include flex;
+      gap: 3rem;
+      position: fixed;
+      top: 0;
+    }
+  }
+  .about {
+    .sujin-pic {
+      width: 30rem;
+      height: 30rem;
+    }
+  }
+  .checkbtn {
+    display: none;
+  }
+
+  .project {
+    width: 60%;
+    height: 45vh;
+  }
+
+  form {
+    width: 60%;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1280px) {
+  nav {
+    ul {
+      gap: 5rem;
+    }
+  }
+  .about {
+    .sujin-pic {
+      width: 40rem;
+      height: 40rem;
+    }
+    h1 {
+      font-size: 5rem;
+    }
+    .job-title {
+      font-size: 3rem;
+    }
+    p {
+      font-size: 1.5rem;
+    }
+  }
+  .project {
+    min-height: 75vh;
+    h3 {
+      font-size: 5rem;
+    }
+    p {
+      font-size: 3rem;
+    }
+    .fa-github {
+      font-size: 5rem;
+    }
+  }
+  footer {
+    .footer-container {
+      display: flex;
+      justify-content: space-between;
+      margin: 0 10rem;
+      padding: 0;
+      .contact {
+        flex-basis: 70%;
+        margin-bottom: 7rem;
+      }
+      .footer-socialMedia {
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 3rem;
+        flex-basis: 30%;
+        font-size: 4rem;
+      }
+    }
+    button[type="button"] {
+      width: 6rem;
+      height: 6rem;
+      font-size: 5rem;
+    }
+  }
+}
