--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -199,19 +199,19 @@ main {
   background-repeat: no-repeat;
   overflow: hidden;
   // when the text outside of container, should be hidden.
+  h3,
+  p,
+  .fa-github {
+    opacity: 0;
+  }
   &:hover {
+    background: #000;
     h3,
     p,
     .fa-github {
       transform: translateX(0);
       opacity: 1;
     }
-  }
-
-  h3,
-  p,
-  .fa-github {
-    opacity: 0;
   }
   h3 {
     font-size: 2rem;
@@ -222,28 +222,18 @@ main {
     transform: translateX(calc(-100% - 8rem));
     transition: 0.5s;
   }
-  .fa-github {
-    transform: translateX(calc(100% + 11rem));
-    transition: 0.5s;
-  }
-
   a {
     font-size: 2rem;
     margin: 0 5px;
-  }
-  &:hover {
-    background: #000;
-    // img {
-    //   opacity: 0;
-    // }
-    h3,
-    p,
-    a {
-      opacity: 1;
+    .fa-github {
+      transform: translateX(calc(100% + 11rem));
+      transition: 0.5s;
+      &:hover {
+        transform: scale(1.2);
+      }
     }
   }
 }
-
 // FOOTER EXCEPT BACK TO TOP
 footer {
   padding: 2rem;
@@ -285,7 +275,7 @@ footer {
     transition: 0.5s;
     &:hover {
       background-color: $secondary-color;
-      box-shadow: 0px 15px 20px rgba(238, 238, 238, 0.4);
+      box-shadow: 0px 8px 10px rgba(238, 238, 238, 0.4);
       text-shadow: 0px 3px 3px rgba(130, 148, 242, 0.5);
       transform: scale(1.1);
       transform: translateY(-7px);
@@ -333,9 +323,11 @@ footer {
     font-size: 2.5rem;
     background-color: $primary-color;
     color: $main-font-color;
+    transition: 0.2s;
     &:hover {
       box-shadow: 0px 0px 20px 1px #ffbb763f;
       border: 1px solid rgba(255, 255, 255, 0.454);
+      background-color: $secondary-color;
     }
   }
 }
